# tx_processor

./: Cargo.toml  README.md  input.csv
src/: balances.rs  checked_decimal.rs  client_processor.rs  csv.rs  error.rs  main.rs  non_negative_checked_decimal.rs  stream_processor.rs  traits.rs  transaction.rs
src/db/: in_mem.rs  mod.rs  traits.rs
src/tests/: mod.rs
src/tests/scenarios/: can_only_dispute_own_transaction.out  case_insensivity.in  deposit.out  deposit_dispute.out  deposit_dispute_balance.in  deposit_dispute_balance.out  deposit_dispute_chargeback.in  deposit_dispute_resolve.out  deposit_dispute_resolve_dispute.out  deposit_multiple_dispute_single_resolve.in  deposit_multiple_dispute_single_resolve.out  deposit_withdrawal.out  deposit_withdrawal_dispute.out  double_resolve_of_single_transaction.in  multiple_clients.in  multiple_clients_balance.in  multiple_clients_balance.out  multiple_disputes.in  multiple_precision_decimal.in  multiple_precision_decimal.out  nothing_works_for_locked_account.in  resolve_after_chargeback_of_different_transactions.out  resolve_chargeback_without_dispute.in  simple_deposit.csv.in  withdrawal_more_than_deposited.in
src/tests/scenarios/malicious/: dispute_nonexistent.in  dispute_nonexistent.out  double_dispute_of_single_transaction.in  double_dispute_of_single_transaction.out  malformed_records.in  malformed_records.out  resolve_chargeback_ignored_without_dispute.out  resolve_without_dispute.in  try_dispute_withdrawal.in  try_dispute_withdrawal.out  try_withdrawal_of_disputed_funds.in  withdrawal_no_owned_funds.in  (+5 more)
(+26 files in other folders)
