[package]
name = "tx_processor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
csv-async = "1.3.0"
futures-util = "0.3.31"
rust_decimal = "1.37.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["fs", "macros", "rt-multi-thread", "io-std"] }
tokio-util = { version = "0.7.14", features = ["compat", "time"] }

[dev-dependencies]
csv-diff = "0.1.1"
test-case = "3.3.1"
walkdir = "2.5.0"
